# evomap

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 153cf7d88a0b_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  capsules.py  events.py  genes.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  capsule.py  event.py  gene.py
backend/app/services/: __init__.py  gep_loop.py  intent.py  mutator.py  scanner.py  signal.py  solidifier.py  validator.py
backend/tests/: conftest.py  test_api_capsules.py  test_api_events.py  test_api_genes.py  test_gep_loop.py  test_main.py  test_models.py
docs/: agent-skill-vs-gep-gene.md  evomap-origin-story.md  gep-protocol-deep-dive.md
docs/plans/: 2026-02-20-gep-platform-analysis.md  v1-phase-01-scaffolding.md  v1-phase-02-data-models.md  v1-phase-03-crud-api.md  v1-phase-04-gep-loop.md  v1-phase-05-frontend-ui.md  v1-phase-06-docker-deployment.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: GeneCard.tsx  Layout.tsx
frontend/src/pages/: CapsuleDetail.tsx  Capsules.tsx  Dashboard.tsx  Events.tsx  GeneDetail.tsx  Genes.tsx
